fix(cache): Add cache-busting param to app.js

--- a/app.html
+++ b/app.html
@@ -32,7 +32,7 @@
 
 <script src="auth.js"></script>
 <script src="stripe-checkout.js"></script>
-<script src="app.js"></script>
+<script src="app.js?v=202602160342"></script>
 <script>
 // Auth gate
 if (!SERLF_AUTH.isAuthenticated()) {
