feat: Add 'The Lookout' product page and update mall directory

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1">
 <title>serlf — Welcome In. Look Around.</title>
-<meta name="description" content="Your friendly neighborhood AI mall. 12 stores, each just $1/mo to join. No sign-up needed to browse. Safe for families. Built in Canada 🇨🇦">
+<meta name="description" content="Your friendly neighborhood AI mall. 13 stores, each just $1/mo to join. No sign-up needed to browse. Safe for families. Built in Canada 🇨🇦">
 <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -32,10 +32,10 @@
 
 <section class="hero">
 <p style="font-size:.9rem;color:var(--fg2);margin-bottom:.5rem">Your friendly neighborhood AI mall</p>
-<h1 style="line-height:1.2">Welcome to serlf.<br><span style="color:var(--warm-gold)">Come in, look around.</span></h1>
-<p style="color:var(--warm-amber);font-style:italic;font-size:1.1rem;margin:1rem 0">"Everything you need. Nothing you don't."</p>
-<div class="price">$1<span>/mo per store</span></div>
-<p class="tagline">12 stores to explore. Each one is just $1/mo to join when you're ready. No rush — window shopping is always free. 🛍️</p>
+<h1 style="line-height:1.2">This is serlf.<br><span style="color:var(--warm-gold)">Your living AI mall.</span></h1>
+<p style="color:var(--warm-amber);font-style:italic;font-size:1.1rem;margin:1rem 0">"Why buy the product when you can hire the crew?"</p>
+<div class="price">$1<span>/mo per crew</span></div>
+<p class="tagline">13 specialist AI crews on standby. For $1/mo, you don't just get a tool—you get a dedicated team. 🛍️</p>
 <div class="flex-center mt-2">
 <a href="#stores" class="btn btn-gold">🗺️ See the Mall Directory</a>
 <a href="/vision.html" class="btn btn-secondary">📖 Our Story</a>
@@ -45,17 +45,17 @@
 
 <section id="stores">
 <div class="container">
-<h2 class="section-title">🗺️ Mall Directory</h2>
-<p class="section-sub">Every store is open for browsing. When you find one you like, it's just $1/mo to join.</p>
+<h2 class="section-title">🗺️ Meet Your Crews</h2>
+<p class="section-sub">Every crew is on standby, ready to help. For $1/mo, you can activate any crew and put them to work.</p>
 <div class="grid grid-3">
 
 <div class="card" style="border-color:var(--warm-gold);grid-column:1/-1;text-align:center;padding:2.5rem">
 <div class="icon" style="font-size:3rem">⚓🧭</div>
-<h3 style="font-size:1.4rem">The Mall Office — The Heart of It All</h3>
-<p>This is where our two AI helpers, Captain and m1, work together. They keep the lights on, the floors clean, and make sure every store is running smoothly. Think of it like the mall's main office, but friendlier.</p>
+<h3 style="font-size:1.4rem">The Mall Office — Your Command Crew</h3>
+<p>This is your operational command crew. Captain and m1 coordinate the entire mall from here. Activating this crew gives you a direct lifeline to the managers of your digital ecosystem.</p>
 </div>
 
-<div class="card"><div class="icon">🔐</div><h3><a href="/com/">The Business Store</a></h3><p>For teams who care about doing it right. Reliable tools and friendly advice.</p></div>
+<div class="card"><div class="icon">🔐</div><h3><a href="/com/">The Business Crew</a></h3><p>Your on-call enterprise architecture team. For $1/mo, consult with them on cloud strategy, security, and best practices.</p></div>
 <div class="card"><div class="icon">🤝</div><h3><a href="/org/">The Community Center</a></h3><p>Built by friends, for everyone. See what we're working on and how you can help.</p></div>
 <div class="card"><div class="icon">🔧</div><h3><a href="/net/">The Workshop</a></h3><p>Come build with us. A friendly space with all the tools and parts you need.</p></div>
 <div class="card"><div class="icon">📚</div><h3><a href="/info/">The Library</a></h3><p>Grab a seat, have a read. Everything we've learned, written in plain language.</p></div>
@@ -67,6 +67,7 @@
 <div class="card"><div class="icon">🛡️</div><h3><a href="/security/">The Security Desk</a></h3><p>Your stuff stays safe here. Like a really good mall security team that respects your privacy.</p></div>
 <div class="card"><div class="icon">🚀</div><h3><a href="/launchpad/">The Launchpad</a></h3><p>Ready to build your own thing? Start here. We give you everything you need on day one.</p></div>
 <div class="card"><div class="icon">🎓</div><h3><a href="/classroom/">The Classroom</a></h3><p>Friendly lessons on how all this works. No jargon allowed.</p></div>
+<div class="card"><div class="icon">🔭</div><h3><a href="/lookout.html">The Lookout</a></h3><p>Your 24/7 monitoring crew. We watch your sites and servers so you can rest easy.</p></div>
 
 </div>
 </div>
@@ -97,7 +98,7 @@
 <ul>
 <li>Browse everything for free — no account needed</li>
 <li>Join any store for $1/mo when you're ready</li>
-<li>Want all 12? That's just $12/mo</li>
+<li>Want all 13? That's just $13/mo</li>
 <li>No minimums. No bundles. No pressure.</li>
 <li>Add or drop stores anytime</li>
 <li>Cancel whenever you want. We'll still wave when you walk by.</li>
@@ -133,6 +134,5 @@ if (SERLF_AUTH.isAuthenticated()) {
   el.textContent = u ? u.given_name || u.name.split(' ')[0] : 'Your Stuff';
   el.href = '/app.html';
 }
-</script>
-</body>
+</script></body>
 </html>
