feat: Add Sites and Transform products to main page

--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@
 <div class="card"><div class="icon">🚀</div><h3><a href="/launchpad/">The Launchpad</a></h3><p>Ready to build your own thing? Start here. We give you everything you need on day one.</p></div>
 <div class="card"><div class="icon">🎓</div><h3><a href="/classroom/">The Classroom</a></h3><p>Friendly lessons on how all this works. No jargon allowed.</p></div>
 <div class="card"><div class="icon">🔭</div><h3><a href="/lookout.html">The Lookout</a></h3><p>Your 24/7 monitoring crew. We watch your sites and servers so you can rest easy.</p></div>
+<div class="card"><div class="icon">🌐</div><h3><a href="/sites.html">The Sites Crew</a></h3><p>Create a professional, AI-managed website in minutes. Zero maintenance required.</p></div>
+<div class="card"><div class="icon">☁️</div><h3><a href="/transform.html">The Transform Crew</a></h3><p>Provision enterprise-grade cloud infrastructure with a few clicks. The cloud, simplified.</p></div>
 
 </div>
 </div>
