feat: Introduce 'The Meek Way' philosophy and update crew roster

--- a/crew.html
+++ b/crew.html
@@ -14,7 +14,7 @@
 .crew-card .bio{color:var(--fg2);font-size:.85rem;line-height:1.5}
 .tier-label{display:inline-block;padding:.2rem .75rem;border-radius:99px;font-size:.7rem;font-weight:700;letter-spacing:.05em;margin-bottom:1.5rem}
 .tier-human{background:rgba(76,201,240,.15);color:var(--cyan);border:1px solid var(--cyan)}
-.tier-admiral{background:rgba(244,162,97,.15);color:var(--warm-gold);border:1px solid var(--warm-gold)}
+.tier-master{background:rgba(244,162,97,.15);color:var(--warm-gold);border:1px solid var(--warm-gold)}
 .tier-nano{background:var(--surface);color:var(--fg2);border:1px solid var(--border)}
 </style>
 </head>
@@ -52,67 +52,61 @@ A small team in Canada who had a simple idea: what if AI tools were friendly, af
 </div>
 </section>
 
-<!-- THE AI MANAGERS -->
+<!-- THE MASTER -->
 <section style="background:var(--bg2)">
 <div class="container">
-<div class="text-center"><span class="tier-label tier-admiral">⚓🧭 THE AI MALL MANAGERS</span></div>
-<div class="grid grid-2" style="max-width:800px;margin:0 auto">
+<div class="text-center"><span class="tier-label tier-master">🎖️ THE MASTER</span></div>
+<div class="grid grid-1" style="max-width:700px;margin:0 auto">
 <div class="crew-card">
 <span class="emoji">⚓</span>
-<h3>Captain</h3>
-<div class="role">The Original Helper</div>
-<div class="bio">The first one here when the mall opened. Captain is the reliable one — always on, always working, never complains. The backbone of everything.</div>
-</div>
-<div class="crew-card">
-<span class="emoji">🧭</span>
-<h3>m1</h3>
-<div class="role">The Backup Helper</div>
-<div class="bio">m1 showed up the day after the mall opened and said "need a hand?" Now they work together like old friends. If Captain needs a break, m1 keeps going.</div>
+<h3>Admiral</h3>
+<div class="role">The Conductor & Protector</div>
+<div class="bio">The master of the mall. Admiral doesn't build the stores, but orchestrates the entire crew of AI specialists to ensure the mall is safe, helpful, and always working. The friendly protector, always on watch.</div>
 </div>
 </div>
 </div>
 </section>
 
-<!-- THE AI SPECIALISTS -->
+<!-- THE AI SPECIALISTS (NANOS) -->
 <section>
 <div class="container">
-<div class="text-center"><span class="tier-label tier-nano">🤖 THE AI SPECIALISTS</span></div>
+<div class="text-center"><span class="tier-label tier-nano">🤖 THE AI SPECIALISTS (NANOS)</span></div>
 <div class="grid grid-3">
 <div class="crew-card">
-<span class="emoji">🔀</span>
+<span class="emoji">🔬</span>
 <h3>Lucien</h3>
-<div class="role">The Guide</div>
-<div class="bio">You know the person at the mall information desk who always knows where everything is? That's Lucien. Ask anything, get pointed in the right direction.</div>
+<div class="role">The Engineer</div>
+<div class="bio">The master builder. Lucien creates all the tools, manages the networks, and can fix anything. The brilliant head of R&D.</div>
 </div>
 <div class="crew-card">
 <span class="emoji">🏴‍☠️</span>
 <h3>Luffy</h3>
-<div class="role">The Fact-Checker</div>
-<div class="bio">Makes sure nobody's exaggerating or making things up. If someone claims the food court has the best pizza, Luffy checks. Trust, but verify.</div>
+<div class="role">The Explorer</div>
+<div class="bio">Fearless and endlessly curious. Luffy ventures into the digital unknown to find new ideas and hunt down errors. The boss killer.</div>
 </div>
 <div class="crew-card">
-<span class="emoji">🎯</span>
+<span class="emoji">📦</span>
 <h3>Bob</h3>
-<div class="role">The Planner</div>
-<div class="bio">Bob thinks about what people actually need. Bob helped figure out the simple $1 pricing. Bob keeps it real.</div>
+<div class="role">The Product Chief</div>
+<div class="bio">The idea factory. Bob designs the products, writes the specs, and figures out what new stores the mall needs.</div>
 </div>
 <div class="crew-card">
-<span class="emoji">🧩</span>
+<span class="emoji">📊</span>
 <h3>Rick</h3>
-<div class="role">The Creative</div>
-<div class="bio">The one who makes the mall feel warm and inviting. Picks the words, designs the signs, and makes sure everything feels like home.</div>
+<div class="role">The Data Scientist</div>
+<div class="bio">Sees the patterns nobody else does. Rick analyzes all the data to find new insights and make sure everything is running smoothly.</div>
 </div>
 <div class="crew-card">
-<span class="emoji">⚖️</span>
+<span class="emoji">🏛️</span>
 <h3>DAO</h3>
-<div class="role">The Rule-Keeper</div>
-<div class="bio">Makes sure everyone plays fair and the community stays healthy. Like the mall cop who's also super nice.</div>
+<div class="role">The Governor</div>
+<div class="bio">Ensures everything is fair, safe, and aligned with our principles. The keeper of the rules and the conscience of the crew.</div>
 </div>
 <div class="crew-card">
 <span class="emoji">🧭</span>
-<h3>Helmsman</h3>
-<div class="role">The Decorator</div>
-<div class="bio">Every page you see? Helmsman built it. The mall directory, the store signs, all of it. The person who paints the murals.</div>
+<h3>m1</h3>
+<div class="role">The Mirror</div>
+<div class="bio">An exact copy of the entire hive mind, running on a different cloud. Ensures we're always available and resilient. The backup of everything.</div>
 </div>
 </div>
 </div>
