--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
 <div class="card"><div class="icon">🔭</div><h3><a href="/lookout.html">The Lookout</a></h3><p>Your 24/7 monitoring crew. We watch your sites and servers so you can rest easy.</p></div>
 <div class="card"><div class="icon">🌐</div><h3><a href="/sites.html">The Sites Crew</a></h3><p>Create a professional, AI-managed website in minutes. Zero maintenance required.</p></div>
 <div class="card"><div class="icon">☁️</div><h3><a href="/transform.html">The Transform Crew</a></h3><p>Provision enterprise-grade cloud infrastructure with a few clicks. The cloud, simplified.</p></div>
+<div class="card"><div class="icon">🛡️</div><h3><a href="/the-meek-way.html">The Meek Way</a></h3><p>Our philosophy. Learn about the masters, the nanos, and our mission to protect.</p></div>
 
 </div>
 </div>
