feat: Productize and launch 'The Lab' from internal tools

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
 <div class="card"><div class="icon">🌐</div><h3><a href="/sites.html">The Sites Crew</a></h3><p>Create a professional, AI-managed website in minutes. Zero maintenance required.</p></div>
 <div class="card"><div class="icon">☁️</div><h3><a href="/transform.html">The Transform Crew</a></h3><p>Provision enterprise-grade cloud infrastructure with a few clicks. The cloud, simplified.</p></div>
 <div class="card"><div class="icon">🛡️</div><h3><a href="/the-meek-way.html">The Meek Way</a></h3><p>Our philosophy. Learn about the masters, the nanos, and our mission to protect.</p></div>
+<div class="card"><div class="icon">🧪</div><h3><a href="/lab.html">The Lab</a></h3><p>A collection of cool AI experiments and tools from our workshop. Come try our latest inventions!</p></div>
 
 </div>
 </div>
