feat: Productize and launch dual-use 'Security Center'

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <div class="card"><div class="icon">🏪</div><h3><a href="/store/">The Marketplace</a></h3><p>Made by our community, for our community. Cool digital tools and templates.</p></div>
 <div class="card"><div class="icon">💡</div><h3><a href="/idea/">The Idea Shop</a></h3><p>32+ clever solutions we discovered. Come learn something new!</p></div>
 <div class="card"><div class="icon">🐝</div><h3><a href="/savings/">The Savings Counter</a></h3><p>We figured out how to make AI 87% cheaper. We'll show you how.</p></div>
-<div class="card"><div class="icon">🛡️</div><h3><a href="/security/">The Security Desk</a></h3><p>Your stuff stays safe here. Like a really good mall security team that respects your privacy.</p></div>
+<div class="card"><div class="icon">🛡️</div><h3><a href="/security-center.html">The Security Center</a></h3><p>Your on-call security crew. We monitor your digital footprint to help you stay safe.</p></div>
 <div class="card"><div class="icon">🚀</div><h3><a href="/launchpad/">The Launchpad</a></h3><p>Ready to build your own thing? Start here. We give you everything you need on day one.</p></div>
 <div class="card"><div class="icon">🎓</div><h3><a href="/classroom/">The Classroom</a></h3><p>Friendly lessons on how all this works. No jargon allowed.</p></div>
 <div class="card"><div class="icon">🔭</div><h3><a href="/lookout.html">The Lookout</a></h3><p>Your 24/7 monitoring crew. We watch your sites and servers so you can rest easy.</p></div>
