Add Products navigation link to main homepage

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <div class="logo">⚓🧭 serlf<span class="maple">🍁</span></div>
 <nav>
 <a href="/">Home</a>
+<a href="../products/">Products</a>
 <a href="/com/">For Teams</a>
 <a href="/org/">Community</a>
 <a href="/net/">Workshop</a>
