--- a/index.html
+++ b/index.html
@@ -41,11 +41,10 @@
 <div class="logo">⚓🧭 serlf<span class="maple">🍁</span></div>
 <nav>
 <a href="/">Home</a>
+<a href="/marketplace.html" style="background:var(--warm-gold);color:black;padding:0.4rem 0.8rem;border-radius:4px;font-weight:bold">🛒 Shop</a>
 <a href="#core">Core Stores</a>
 <a href="#ai">AI Floor</a>
-<a href="#dev">Dev Wing</a>
-<a href="#business">Business</a>
-<a href="#creative">Creative</a>
+<a href="#mall-pass">Mall Pass</a>
 <a href="/login.html" id="nav-auth">Sign In</a>
 </nav>
 </div></header>
@@ -62,9 +61,9 @@
 <div class="price">$1<span>/mo per store</span></div>
 <p class="tagline">50+ specialized AI stores. Each one is just $1/mo to join when you're ready. Or get them all with Mall Pass! 🛍️</p>
 <div class="flex-center mt-2">
-<a href="#stores" class="btn btn-gold">🗺️ Explore All Stores</a>
+<a href="/marketplace.html" class="btn btn-gold">🛒 Shop Now - Add to Cart</a>
 <a href="#mall-pass" class="btn btn-secondary">🎫 Mall Pass ($25/mo)</a>
-<a href="/vision.html" class="btn btn-secondary">📖 Our Story</a>
+<a href="#stores" class="btn btn-secondary">🗺️ Browse All Stores</a>
 </div>
 </section>
 
