🎨 ADD FUN ACTIVITIES & COMMUNITY FEATURES: Arts, crafts, game dev, community activities
FEATURES ADDED:
- Complete fun activities catalog (12 new activities)
- Arts & Crafts: AI Art Studio, Design Challenges, Digital Crafting
- Game Development: Bootcamp, Jams, AI Game Design, Publishing
- Community: Maker Mondays, Tutorial Tuesdays, Mentorship, Achievements
- Shopping cart integration with marketplace
- Community Organizer announcement (hiring plan)
- Suggested cart combinations for different interests

FOR ALL MEEKS:
- Activities designed for all skill levels
- $1/mo per activity (accessible pricing)
- Community-building focus
- Learning + creating + sharing approach
- Integration with existing marketplace cart system

Next: Hire Community Organizer to coordinate these activities!

--- a/marketplace.html
+++ b/marketplace.html
@@ -175,6 +175,7 @@
 <a href="/">← Home</a>
 <a href="#flagship">Flagship</a>
 <a href="#all-stores">All Stores</a>
+<a href="/activities.html" style="background:var(--green);color:white;padding:0.4rem 0.8rem;border-radius:4px;font-weight:bold">🎨 Fun Activities</a>
 <a href="#mall-pass">Mall Pass</a>
 </nav>
 </div>
